@@ -24,9 +24,10 @@ upload_flags = -F -e
 #platform = atmelavr@1.4.1
 # Arduino 1.6.23
 platform = atmelavr@1.15.0
-src_build_flags = 
+build_src_flags = 
  -DOEV6
  -DRELAY_PWM
+# -DBOOTLOCK
 # -DENABLE_CGMI                
  -DAUTOSVCLEVEL
  -DSHOW_DISABLED_TESTS
